# DoubanMovie2Notion

./: .gitignore  README.md  app.go  go.mod  go.sum  main.go  movierobot.py  muiltmovie_spider.py  package.json  pnpm-lock.yaml  wails.json
backend/model/: movie.go  struct.go
backend/network/: communicate.go  makeBody.go  query.go  requests.go
config/: config.go
demo/: movie_robot.py
frontend/: index.html  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: ConfigName.vue
frontend/src/router/: index.ts  route.ts
frontend/src/types/: config.ts  index.ts
frontend/src/views/: Config.vue  Home.vue
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
package/logger/: logger.go
package/util/: makeBody.go  mkDir.go
src/: App.vue  movie_robot.py  movierobot.py  movies_from_rankings_spider.py
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/scripts/: hooks.nsh
src-tauri/src/: cli.rs  command.rs  config.rs  lib.rs  model.rs  network.rs  utils.rs
src-tauri/src/model/: movie.rs  notion.rs
src-tauri/src/network/: crawl.rs  notion.rs
src/api/: index.ts
src/types/: config.ts  query.ts
src/views/: Config.vue  Home.vue
