[package]
name = "db2n"
version = "0.3.0"
description = "A Tauri App"
authors = ["Yoa"]
edition = "2021"
default-run = "db2n"

[[bin]]
name = "db2n-cli"
path = "src/bin/db2n-cli.rs"

[[bin]]
name = "db2n"
path = "src/bin/db2n-gui.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db2n_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.4"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
